Fix footer margins on mobile size

--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -38,6 +38,7 @@ footer {
   .about-the-site {
   	list-style-type: none;
     margin-bottom: 0;
+    margin-bottom: 3.2rem;
 
     .translations {
   		list-style-type: none;
@@ -72,5 +73,6 @@ footer {
     text-transform: none;
     font-family:  $fontPrimary ;
     line-height: 40px;
+    margin-bottom: 3.2rem;
   }
 }
